	- added temporary hack in Makefile.PL to support Access
	- added mapping for flat arrays
	- factorized code common to Array & FlatArray

1.07  Feb 29 2000 - interim version
	- adapted test suite for Sybase and other NULL-picky databases
	- added experimental support for vendor extensions (Dialect)
	- added skeleton Dialect::Sybase with support for datepart
	- did extensive rework on Expr instantiation
	- began documenting Type
	- added Storage::reload()

1.08  Mar 26 2000 - interim version
	- batch allocation of object ids
	- support for Lobs contributed by marian.kelc@ruhr-uni-bochum.de
	- Storage::reset()

1.09  ? - interim version
	- String calls DBI for correct quoting, as Marian Kelc suggested
	- fixed Array problem when removing elements from middle of collection
	- (?)

1.10  Apr 19 2000 - interim version
	- changed reset() into unload() and added support for partial unloading
	- tx_do() can now propagate arguments to closure/anon-sub;
	  insert(), update() and erase() pass anon-subs to tx_do to prevent
	  leaks (thanks Radu Greab)

1.11  May 29 2000 - public version
	- ordering result set by descending order is now supported
	- die() on attempt to load from an invalid id
	- removed silly table id allocation limit (t1000) in Coll.pm

1.13  Jul 11 2000 - interim version
	- new FlatHash and DMDateTime mappings contributed by Gabor Herr
          <herr@iti.informatik.tu-darmstadt.de>
	- some more doc in Type.pod
	- date & time doc moved to DateTime.pod
	- deploy() puts \n between instructions in trace

1.15  Jul 21 2000 - interim version
	- new PerlDump mapping contributed by Gabor Herr
          <herr@iti.informatik.tu-darmstadt.de>

1.16  Jul 25 2000 - interim version
	- fixed deploy() bug: didn't take col names into account for Array, Set and Hash
	- fixed query_expr bug in Scalar and Ref: used field name instead of col name

1.17  Jul 28 2000 - interim version
	- Gabor's patches on deep updates

1.18  Jul 28 2000 - experimental version
	- weakrefs!!