@@ -105,4 +105,5 @@ Revision history for Perl extension Tangram.
 	- Gabor's patches on deep updates
 
 1.18  Jul 28 2000 - experimental version
-	- weakrefs!!
+	- weakrefs!
+	- tuples
